Update 'w3lie0py5-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-51fd64b203.ui9f.p3.openshiftapps.com/rhtap/rhtap-qe:30703f8ca84a423824658839f855fe14c931814f@sha256:737b9605129e93b1a615a110a0bbb6d6aa21b215c9d6ee1b42c3318d2e86d123

--- a/components/w3lie0py5-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/w3lie0py5-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: w3lie0py5-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-51fd64b203.ui9f.p3.openshiftapps.com/rhtap/rhtap-qe:30703f8ca84a423824658839f855fe14c931814f@sha256:737b9605129e93b1a615a110a0bbb6d6aa21b215c9d6ee1b42c3318d2e86d123
+          name: container-image
